--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>智慧景区后台
+    </title>
+    <script type="text/javascript" src="https://api.map.baidu.com/getscript?v=1.0&&type=webgl&ak=wQFpXrGgymO4lVvKP1aKUY2yov9LpIaa"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
